--- a/src/css/About.scss
+++ b/src/css/About.scss
@@ -120,3 +120,21 @@ section{
 .about-info-main{
     grid-gap: 1rem;
 }
+
+.about-label {
+    
+    
+    h2 {
+    margin: 0;
+    padding: 0;
+    font-size: clamp(40px, 8vw, 60px);
+    }
+
+    &::after{
+        content: '';
+        top: 0;
+        left: 0;
+        width: 60px;
+        height: 2px;
+    }
+}
