--- a/src/App.scss
+++ b/src/App.scss
@@ -127,6 +127,7 @@
   flex-flow: column;
   justify-content: flex-start;
   padding: 100px 50px 0;
+  align-items: center;
 
   @media #{Media.$iphone-portrait}{
     padding: 70px 20px;
