--- a/src/css/Contact.scss
+++ b/src/css/Contact.scss
@@ -4,7 +4,7 @@
 .contact-form{
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 40%;
     padding: 20px;
     gap: 1em;
     opacity: 0;
@@ -121,7 +121,7 @@ input[type="submit"]{
 }
 
 .contact-info-wrapper{
-    width: 50%;
+    width: 40%;
     display: flex;
     flex-direction: column;
     padding: 25px;
@@ -140,12 +140,11 @@ input[type="submit"]{
 
 .contact-wrapper{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
     border-radius: 20px 0;
     background: linear-gradient(135deg, #a7bcb9, #faefea);
     box-shadow: 5px 5px 10px grey;
-    max-width: 900px;
     margin: 0 auto;
     transform: scale(.6);
     opacity: 0;
