--- a/src/Components/Flyer/Flyer.scss
+++ b/src/Components/Flyer/Flyer.scss
@@ -14,7 +14,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  animation: 1.5s ease-out 0s 1 slideInLeft;
+  transform: translateX(-150%);
+  animation: 1.5s ease-out slideInLeft forwards 3s;
   align-items: center;
   align-self: center;
   transition: .5s;
@@ -47,10 +48,7 @@
 }
 
 @keyframes slideInLeft {
-  0% {
-    transform: translateX(-150%);
-  }
-  100% {
+  to{
     transform: translateX(0);
   }
 }
