--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -71,6 +71,13 @@ header{
     text-decoration: none;
     color: inherit;
     font-weight: bold;
+    opacity: 0;
+    transform: scale(.2);
+    animation: pop 1s forwards 1.5s;
+}
+
+@keyframes pop {
+    to{transform: scale(1); opacity: 1;}
 }
 
 #progress-bar-wrapper{
