--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -7,19 +7,15 @@
     position: fixed;
     border-bottom: 1px solid rgb(203, 203, 203);
     z-index: 10;
-    animation: slideInTop-head 2s ease;
+    animation: slideInTop-head 1s ease-in-out;
     margin-top: 5px;
-    transition: .3s ease-in;
+    transition: .3s;
     backdrop-filter: blur(10px);
 
     @media #{Media.$iphone-portrait}, #{Media.$iphone-landscape}{
         height: 3em;
     }
 }
-
-// header{
-//     animation: slideInTop-head 2s ease-in-out ;
-// }
 
 .head-on-scroll{
     height: 3.5em;
@@ -29,10 +25,6 @@
     @media #{Media.$iphone-portrait}, #{Media.$iphone-landscape}{
         height: 2.5em;
     }
-}
-
-header{
-    animation: 1.5s ease-out 0s 1 slideInTop-head;
 }
 
 .head-wrapper {
