Updating landing page css

--- a/src/css/HomeStyle.scss
+++ b/src/css/HomeStyle.scss
@@ -411,6 +411,10 @@
       transform: scale(1.2);
   }
 
+  @media only screen and (min-width: 80em) {
+      display: none;
+  }
+
   // &::before{
   //     content: '';
   //     background: url("../img/ResumeQR.png") no-repeat;
