New layout for navigation menu for mobile devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -130,6 +130,10 @@
   .download-wrapper{
     border-bottom: 4px solid white;
   }
+
+  .nav-bg-portrait{
+    background :rgb(47 44 91);
+  }
   
 }
 // Dark Theme end ----------
