--- a/src/Components/Flyer/Flyer.scss
+++ b/src/Components/Flyer/Flyer.scss
@@ -19,7 +19,7 @@
   flex-direction: column;
   justify-content: space-between;
   transform: translateX(-150%);
-  animation: 1.5s ease-out slideInLeft forwards 3.5s;
+  animation: .5s ease-out slideInLeft forwards 2.3s;
   align-items: center;
   align-self: center;
   transition: .5s;
