--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -7,7 +7,7 @@
     position: fixed;
     border-bottom: 1px solid rgb(203, 203, 203);
     z-index: 10;
-    animation: slideInTop-head 1s ease-in-out;
+    animation: slideInTop-head .5s ease-in-out;
     margin-top: 5px;
     transition: .3s;
     backdrop-filter: blur(10px);
@@ -79,12 +79,12 @@
     color: inherit;
     font-weight: bold;
     opacity: 0;
-    transform: scale(.2);
-    animation: pop 1s forwards 1.5s;
+    transform: translate(-50px,-150%);
+    animation: translate-nav .5s forwards .5s;
 }
 
-@keyframes pop {
-    to{transform: scale(1); opacity: 1;}
+@keyframes translate-nav {
+    to{transform: translate(0,0); opacity: 1;}
 }
 
 #progress-bar-wrapper{
