Updating css changes for prject tab

--- a/src/css/Contact.scss
+++ b/src/css/Contact.scss
@@ -135,7 +135,7 @@ input[type="submit"]{
 
 .slide-right{
     transform: translateX(100%);
-    //opacity: 0;
+    opacity: 0;
     transition: .5s;
 }
 
