Adding language translation to home page

--- a/src/css/About.scss
+++ b/src/css/About.scss
@@ -223,3 +223,28 @@
     80%{transform: translateY(5%);}
     100%{transform: translateY(0%);opacity: 1; }
 }
+
+.text-link {
+    display: inline-block;
+    position: relative;
+    color: #0087ca;
+    text-decoration: none;
+  }
+  
+  .text-link::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #0087ca;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+  }
+  
+  .text-link:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+  }
